--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
+  <title>Ember Components</title>
+  <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="/vendor/bootstrap/non-responsive.css">
   <link rel="stylesheet" href="/assets/app.css">
 
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
@@ -10,6 +12,8 @@
   <script src="/vendor/jquery/jquery.js"></script>
   <script src="/vendor/handlebars/handlebars.js"></script>
   <script src="/vendor/ember/index.js"></script>
+  <script src="/vendor/ember-data/ember-data.js"></script>
+  <script src="/vendor/bootstrap/bootstrap.min.js"></script>
   <script src="/vendor/almond.js"></script>
   <script src="/vendor/resolver.js"></script>
   <!-- endbuild -->
