Reactivated Hexaflip.js for frontpage, it's working fine beside having the script import at the end of the index.html bady to load at the right time.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>Ember Components</title>
   <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/vendor/bootstrap/non-responsive.css">
+  <link rel="stylesheet" href="/vendor/hexaflip/hexaflip.css">
   <link rel="stylesheet" href="/assets/app.css">
 
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
@@ -27,5 +28,6 @@
   <script>
     window.App = require('appkit/app').create();
   </script>
+  <script src="/vendor/hexaflip/hexaflip.min.js"></script>
 </body>
 </html>
