Updated project structure from @1c67a9f to latest @c2f6690, everything running fine

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   <!-- build:js(.) assets/vendor.min.js -->
   <script src="/vendor/jquery/jquery.js"></script>
   <script src="/vendor/handlebars/handlebars.js"></script>
-  <script src="/vendor/ember/index.js"></script>
-  <script src="/vendor/ember-data/ember-data.js"></script>
+  <script src="/vendor/ember/ember.js"></script>
+  <script src="/vendor/ember-data-shim/ember-data.js"></script>
   <script src="/vendor/bootstrap/bootstrap.min.js"></script>
   <script src="/vendor/almond.js"></script>
   <script src="/vendor/resolver.js"></script>
