--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/vendor/bootstrap/non-responsive.css">
   <link rel="stylesheet" href="/vendor/hexaflip/hexaflip.css">
+  <link rel="stylesheet" href="/vendor/prismjs/prism.css">
   <link rel="stylesheet" href="/assets/app.css">
 
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
@@ -15,6 +16,7 @@
   <script src="/vendor/ember/ember.js"></script>
   <script src="/vendor/ember-data-shim/ember-data.js"></script>
   <script src="/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="/vendor/prismjs/prism.js"></script>
   <script src="/vendor/almond.js"></script>
   <script src="/vendor/resolver.js"></script>
   <!-- endbuild -->
