Added font-awesome and used for landing pace icons

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/vendor/hexaflip/hexaflip.css">
   <link rel="stylesheet" href="/vendor/highlightjs/styles/default.css">
   <link rel="stylesheet" href="/vendor/highlightjs/styles/tomorrow.css">
+  <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/assets/app.css">
 
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
