--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <script src="/vendor/momentjs/moment.js"></script>
   <script src="/vendor/almond.js"></script>
   <script src="/vendor/resolver.js"></script>
+  <script src="/vendor/typeahead.js/dist/typeahead.bundle.js"></script>
   <!-- endbuild -->
 
   <!-- build:js(tmp/public) assets/app.min.js -->
